# github_readme_copy

./: .automation_tasks_rs_file_hashes.json  .gitignore  Cargo.toml  README.md  RELEASES.md  body_1.html  cache34.txt  github_api_config.json
.github/workflows/: rust.yml
automation_tasks_rs/: .file_hashes.json  .old_metadata.json  Cargo.toml  README.md  crates_io_config.json  github_api_config.json
automation_tasks_rs/src/: main.rs
automation_tasks_rs/src/encrypt_decrypt_with_ssh_key_mod/: crates_io_api_token_mod.rs  encrypt_decrypt_mod.rs  github_api_token_with_oauth2_mod.rs  mod.rs
bash_script_for_backup/: README.md
copied_readme/: 0_template.txt  GuitaraokeLeader.html  QVS20.html  QVS21.html  README.md  amafatt.html  arduino_turns_on_laptop.html  bestia_dev_text_to_speech.html  blinky_blue.html  cargo-auto.html  cargo_auto_github_lib.html  cargo_auto_lib.html  cargo_crev_reviews_workspace.html  cargo_crev_web.html  cargo_crev_web_admin.html  chext_fill_form_from_json.html  chrome_preferences_replace.html  codetour_export_to_md.html  crev-proofs.html  dev_bestia_cargo_completion.html  dev_bestia_html_templating.html  dev_bestia_simple_server.html  dev_bestia_string_utils.html  dev_bestia_url_utf8.html  development_environment.html  docker_rust_development.html  docker_rust_minimal.html  dodrio_templating.html  dropbox_backup_to_external_disk.html  efrro_form_c_chrome_ext.html  efrro_form_c_json.html  foreground_scheduler.html  github_readme_copy.html  home_automation.html  indexeddb_from_rust.html  longan_nano_rust_wsl2_platformio_setup.html  mem1.html  mem1_electron.html  mem1_phonegap.html  mem2.html  (+28 more)
copied_readme/css/: bestia01.css
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  tidy_warnings.txt  web-links-for-humans.html
docs/github_readme_copy/: all.html  constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  enum.LibraryError.html  fn.download_readme.html  fn.format_upper_hello_phrase.html  fn.get_github_secret_token.html  fn.github_backup_bash_scripts.html  fn.list_my_public_repos.html  fn.substack_download.html  fn.tracing_init.html  fn.upload_github_readme.html  fn.upload_substack_articles.html  index.html  macro.pos.html  sidebar-items.js  static.GITHUB_API_CONFIG.html  struct.GithubApiConfig.html  trait.ResultLogError.html
docs/github_readme_copy/encrypt_decrypt_with_ssh_key_mod/: constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  index.html  sidebar-items.js
docs/github_readme_copy/github_mod/: fn.download_readme.html  fn.format_upper_hello_phrase.html  fn.get_article.html  fn.get_github_description.html  fn.get_long_title.html  fn.get_readme_body.html  fn.github_backup_bash_scripts.html  fn.img_src_modify.html  fn.insert_article.html  fn.insert_description.html  fn.insert_title.html  fn.insert_url.html  fn.list_my_public_repos.html  fn.make_uppercase.html  fn.remove_svg_octicon.html  fn.rename_obsolete_html.html  fn.upload_github_readme.html  fn.upload_substack_articles.html  fn.vec_of_private_and_public_repos_from_github.html  fn.vec_of_public_repos_from_github.html  index.html  sidebar-items.js
docs/github_readme_copy/substack_mod/: fn.get_article.html  fn.insert_article.html  fn.insert_original_url.html  fn.insert_post_date.html  fn.insert_title.html  fn.remove_a_role_button.html  fn.remove_attribute_a_rel_nofollow.html  fn.remove_dev_class_pencraft.html  fn.remove_div_class_anchor.html  fn.remove_div_post_footer.html  fn.remove_div_role_dialog.html  fn.substack_download.html  fn.vec_of_public_repos_from_github.html  index.html  sidebar-items.js  struct.SubstackArticle.html
docs/github_readme_copy/utils_mod/: fn.find_from.html  fn.find_pos_end_data_before_delimiter.html  fn.find_pos_start_data_after_delimiter.html  fn.tracing_init.html  index.html  sidebar-items.js  trait.ResultLogError.html
docs/search.desc/github_readme_copy/: github_readme_copy-desc-0-.js
docs/src/github_readme_copy/: github_mod.rs.html  lib.rs.html  substack_mod.rs.html  (+1 more)
examples/: example_1.rs
src/: github_mod.rs  lib.rs  substack_mod.rs  utils_mod.rs
src/encrypt_decrypt_with_ssh_key_mod/: encrypt_decrypt_mod.rs  encrypt_decrypt_with_ssh_key_mod_mod.rs  github_api_token_with_oauth2_mod.rs  mod.rs
template_for_bash_script_for_backup/: README.md
template_for_github_readme/: 0_template.txt  README.md
template_for_github_readme/css/: bestia01.css
template_for_substack_articles/: 0_template.txt  README.md
template_for_substack_articles/css/: bestia01.css
tests/: integration_test.rs
tmp/: temp34.txt
(+65 files in other folders)
