[package]
name = "github_readme_copy"
version = "1.0.154"
description = "Copy my public README.md files from GitHub in HTML format"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/github_readme_copy"
categories = ["rust-patterns"]
keywords = ["Rust"]
publish = false

[dependencies]
log = "0.4"
pretty_env_logger="0.4.0"
thiserror = "1.0.30"
anyhow="1.0.56"
octocrab="0.43.0"
unwrap="1.2.1"
futures = "0.3.21"
rayon = "1.5.1"
lol_html = "0.4.0"

# reqwest 0.12.12 is tha last that builds in win-git-bash
reqwest={version="=0.12.12", features=["json","stream", "blocking"]}
serde ={ version= "1.0.219", features=["std","derive"]}
serde_json = "1.0.140"
ssh-key = { version = "0.6.7", features = [ "rsa", "encryption","ed25519"] }
ssh_agent_client_rs_git_bash = "0.0.11"
rsa = { version = "0.9.8", features = ["sha2","pem"] }
zeroize = {version="1.8.1", features=["derive"]}
aes-gcm = "0.10.3"
camino = "1.1.9"
base64ct = {version = "1.7.3", features = ["alloc"] }
secrecy = "0.10.3"
chrono ={version="0.4.40", default-features=false, features=["now"]}
tokio-util = {version = "0.7.14", features = ["codec"]}
tokio = {version = "1.44.1", features = ["rt","rt-multi-thread","fs"]}
url="2.5.4"
home = "0.5.11"
inquire="0.7.5"
derive_more={version="2.0.1", features=["display"]}
