[package]
name = "github_readme_copy"
version = "1.0.205"
description = "Copy my public README.md files from GitHub in HTML format"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/github_readme_copy"
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["rust-patterns"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["Rust","maintained","ready-for-use"]
publish = false

[dependencies]
log = "0.4.28"
pretty_env_logger="0.5.0"
thiserror = "2.0.17"
anyhow="1.0.100"
octocrab="0.47.1"
unwrap="1.2.1"
futures = "0.3.21"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread" ]}
rayon = "1.5.1"
lol_html = "2.7.0"

# for github encrypt decrypt
reqwest={version="0.12.24", features=["json","stream", "blocking"]}
secrecy = "0.10.3"
aes-gcm = "0.10.3"
base64ct = {version = "1.7.3", features = ["alloc"] }
serde ={ version= "1.0.228", features=["std","derive"]}
serde_json = "1.0.145"
ssh-key = { version = "0.6.7", features = [ "rsa", "encryption","ed25519"] }
ssh_agent_client_rs_git_bash = "0.0.19"
camino = "1.2.1"
zeroize = {version="1.8.2", features=["derive"]}
chrono ={version="0.4.42", default-features=false, features=["now"]}
inquire="0.9.1"
rsa = { version = "0.9.8", features = ["sha2","pem"] }
home="0.5.12"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt", "time"] }
tracing-appender="0.2.3"
time = {version="0.3.44", features=["macros","local-offset"]}
